--- a/JavaFX/EmloyeeFile/pom.xml
+++ b/JavaFX/EmloyeeFile/pom.xml
@@ -60,7 +60,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>vn.emloyeefile/vn.emloyeefile.EmloyeeApplication</mainClass>
+                            <mainClass>vn.emloyeefile/vn.employeefile.EmloyeeApplication</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
